Start modifying API keeping 'dinosaur' packages
but changing publicly visible pieces like URL routes and kinds

--- a/openapi/fleet-manager.yaml
+++ b/openapi/fleet-manager.yaml
@@ -14,7 +14,7 @@ servers:
   - url: /
     description: current domain
 paths:
-  /api/dinosaurs_mgmt/v1:
+  /api/rhacs/v1:
     get:
       operationId: getVersionMetadata
       responses:
@@ -26,7 +26,7 @@ paths:
           description: Version metadata
       summary: Returns the version metadata
 
-  /api/dinosaurs_mgmt/v1/errors/{id}:
+  /api/rhacs/v1/errors/{id}:
     get:
       operationId: getErrorById
       responses:
@@ -42,7 +42,7 @@ paths:
       parameters:
         - $ref: "#/components/parameters/id"
 
-  /api/dinosaurs_mgmt/v1/errors:
+  /api/rhacs/v1/errors:
     get:
       operationId: getErrors
       responses:
@@ -56,7 +56,7 @@ paths:
       tags:
         - errors
 
-  /api/dinosaurs_mgmt/v1/status:
+  /api/rhacs/v1/status:
     get:
       operationId: getServiceStatus
       responses:
@@ -78,7 +78,7 @@ paths:
       summary: Returns the status of resources, such as whether maximum service capacity has been reached
       security:
         - Bearer: [ ]
-  /api/dinosaurs_mgmt/v1/dinosaurs/{id}:
+  /api/rhacs/v1/dinosaurs/{id}:
     get:
       operationId: getDinosaurById
       responses:
@@ -252,7 +252,7 @@ paths:
                 $ref: '#/components/schemas/Error'
     parameters:
       - $ref: "#/components/parameters/id"
-  /api/dinosaurs_mgmt/v1/dinosaurs:
+  /api/rhacs/v1/centrals:
     post:
       operationId: createDinosaur
       parameters:
@@ -398,7 +398,7 @@ paths:
         - $ref: '#/components/parameters/size'
         - $ref: '#/components/parameters/orderBy'
         - $ref: '#/components/parameters/search'
-  /api/dinosaurs_mgmt/v1/cloud_providers:
+  /api/rhacs/v1/cloud_providers:
     get:
       summary: Returns the list of supported cloud providers
       operationId: getCloudProviders
@@ -432,7 +432,7 @@ paths:
       parameters:
         - $ref: '#/components/parameters/page'
         - $ref: '#/components/parameters/size'
-  /api/dinosaurs_mgmt/v1/cloud_providers/{id}/regions:
+  /api/rhacs/v1/cloud_providers/{id}/regions:
     get:
       summary: Returns the list of supported regions of the supported cloud provider
       operationId: getCloudProviderRegions
@@ -471,7 +471,7 @@ paths:
   #
   # These are the user-facing related endpoints
   #
-  /api/dinosaurs_mgmt/v1/dinosaurs/{id}/metrics/query_range:
+  /api/rhacs/v1/dinosaurs/{id}/metrics/query_range:
     get:
       summary: Returns metrics with timeseries range query by Dinosaur ID
       operationId: getMetricsByRangeQuery
@@ -507,7 +507,7 @@ paths:
         - $ref: "#/components/parameters/duration"
         - $ref: "#/components/parameters/interval"
         - $ref: "#/components/parameters/filters"
-  /api/dinosaurs_mgmt/v1/dinosaurs/{id}/metrics/query:
+  /api/rhacs/v1/dinosaurs/{id}/metrics/query:
     get:
       summary: Returns metrics with instant query by Dinosaur ID
       operationId: getMetricsByInstantQuery
@@ -541,7 +541,7 @@ paths:
       parameters:
         - $ref: "#/components/parameters/id"
         - $ref: "#/components/parameters/filters"
-  /api/dinosaurs_mgmt/v1/dinosaurs/{id}/metrics/federate:
+  /api/rhacs/v1/dinosaurs/{id}/metrics/federate:
     get:
       summary: Returns all metrics in scrapeable format for a given dinosaur id
       operationId: federateMetrics
@@ -703,10 +703,10 @@ components:
           example:
             kind: "APIVersion"
             id: "v1"
-            href: "/api/dinosaurs_mgmt/v1"
+            href: "/api/rhacs/v1"
             collections:
               - id: "dinosaurs"
-                href: "/api/dinosaurs_mgmt/v1/dinosaurs"
+                href: "/api/rhacs/v1/dinosaurs"
                 kind: "DinosaurList"
           properties:
             collections:
@@ -1089,7 +1089,7 @@ components:
       value:
         id: "1iSY6RQ3JKI8Q0OTmjQFd3ocFRg"
         kind: "dinosaur"
-        href: "/api/dinosaurs_mgmt/v1/dinosaurs/1iSY6RQ3JKI8Q0OTmjQFd3ocFRg"
+        href: "/api/rhacs/v1/dinosaurs/1iSY6RQ3JKI8Q0OTmjQFd3ocFRg"
         status: "ready"
         cloud_provider: "aws"
         multi_az: true
@@ -1105,7 +1105,7 @@ components:
       value:
         id: "1iSY6RQ3JKI8Q0OTmjQFd3ocFRg"
         kind: "dinosaur"
-        href: "/api/dinosaurs_mgmt/v1/dinosaurs/1iSY6RQ3JKI8Q0OTmjQFd3ocFRg"
+        href: "/api/rhacs/v1/dinosaurs/1iSY6RQ3JKI8Q0OTmjQFd3ocFRg"
         status: "failed"
         cloud_provider: "aws"
         multi_az: true
@@ -1156,7 +1156,7 @@ components:
       value:
         id: "103"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/103"
+        href: "/api/rhacs/v1/errors/103"
         code: "DINOSAURS-MGMT-103"
         reason: "Synchronous action is not supported, use async=true parameter"
         operation_id: "1iWIimqGcrDuL61aUxIZqBTqNRa"
@@ -1164,7 +1164,7 @@ components:
       value:
         id: "103"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/103"
+        href: "/api/rhacs/v1/errors/103"
         code: "DINOSAURS-MGMT-103"
         reason: "Synchronous action is not supported, use async=true parameter"
         operation_id: "1iWIimqGcrDuL61aUxIZqBTqNRa"
@@ -1172,7 +1172,7 @@ components:
       value:
         id: "23"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/23"
+        href: "/api/rhacs/v1/errors/23"
         code: "DINOSAURS-MGMT-23"
         reason: "Failed to parse search query: Unable to list Dinosaur requests for api_dinosaur_service: DINOSAURS-MGMT-23: Failed to parse search query: Unsupported column name for search: 'id'. Supported column names are: region, name, cloud_provider, name, status. Query invalid: id = 123"
         operation_id: "1lWDGuybIrEnxrAem724gqkkiDv"
@@ -1180,7 +1180,7 @@ components:
       value:
         id: "21"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/21"
+        href: "/api/rhacs/v1/errors/21"
         code: "DINOSAURS-MGMT-21"
         reason: "missing path parameter: dinosaur id"
         operation_id: "1lWDGuybIrEnxrAem724gqkkiDv"
@@ -1188,14 +1188,14 @@ components:
       value:
         id: "7"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/7"
+        href: "/api/rhacs/v1/errors/7"
         code: "DINOSAURS-MGMT-7"
         reason: "The requested resource doesn't exist"
     404DeleteExample:
       value:
         id: "7"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/7"
+        href: "/api/rhacs/v1/errors/7"
         code: "DINOSAURS-MGMT-7"
         reason: "DinosaurResource with id='1iK3duVYIvv5YvLlyz1mGR3JyqN' not found"
         operation_id: "1iYO7g2g6HTdUKUa2ksH82kQD3y"
@@ -1203,7 +1203,7 @@ components:
       value:
         id: "11"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/11"
+        href: "/api/rhacs/v1/errors/11"
         code: "DINOSAURS-MGMT-11"
         reason: "Unable to verify JWT token: Required authorization token not found"
         operation_id: "1iY3UhEhwmXBpWPfI2lNekpd4ZD"
@@ -1211,7 +1211,7 @@ components:
       value:
         id: "4"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/4"
+        href: "/api/rhacs/v1/errors/4"
         code: "DINOSAURS-MGMT-4"
         reason: "User 'foo-bar' is not authorized to access the service."
         operation_id: "1lY3UiEhznXBpWPfI2lNejpd4YC"
@@ -1219,7 +1219,7 @@ components:
       value:
         id: "5"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/5"
+        href: "/api/rhacs/v1/errors/5"
         code: "DINOSAURS-MGMT-5"
         reason: "User 'foo-bar' has reached a maximum number of 6 allowed instances."
         operation_id: "1lY3UiEkxnXBpVPeI2oNejd3XB"
@@ -1227,7 +1227,7 @@ components:
       value:
         id: "12"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/12"
+        href: "/api/rhacs/v1/errors/12"
         code: "DINOSAURS-MGMT-12"
         reason: "Required terms have not been accepted"
         operation_id: "kXCzWPeI2oXBpVPeI2LvF9jMQY"
@@ -1235,7 +1235,7 @@ components:
       value:
         id: "36"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/36"
+        href: "/api/rhacs/v1/errors/36"
         code: "DINOSAURS-MGMT-36"
         reason: "Dinosaur cluster name is already used"
         operation_id: "6kY0UiEkzkXCzWPeI2oYehd3ED"
@@ -1243,7 +1243,7 @@ components:
       value:
         id: "9"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/9"
+        href: "/api/rhacs/v1/errors/9"
         code: "DINOSAURS-MGMT-9"
         reason: "Unspecified error"
         operation_id: "1ieELvF9jMQY6YghfM9gGRsHvEW"
@@ -1251,7 +1251,7 @@ components:
       value:
         id: "9"
         kind: "Error"
-        href: "/api/dinosaurs_mgmt/v1/errors/9"
+        href: "/api/rhacs/v1/errors/9"
         code: "DINOSAURS-MGMT-9"
         reason: "error deleting syncset: OCM-EX-9: failed to delete syncset: ext-serviceapi-1ix03lndlmq0qfc7sita5sljv8e
           for cluster id: 1g5d88q0lrcdv4g7alb7slfgnj3dhbsj%!(EXTRA *errors.Error=identifier
