--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -685,6 +685,8 @@ objects:
             - --db-sslmode=${DB_SSLMODE}
             - --db-max-open-connections=${DB_MAX_OPEN_CONNS}
             - --enable-db-debug=${ENABLE_DB_DEBUG}
+            - --redhat-sso-client-id-file=/secrets/service/redhatsso-service.clientId
+            - --redhat-sso-client-secret-file=/secrets/service/redhatsso-service.clientSecret
             - --ocm-client-id-file=/secrets/service/ocm-service.clientId
             - --ocm-client-secret-file=/secrets/service/ocm-service.clientSecret
             - --sso-base-url=${SSO_BASE_URL}
