--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -1,4 +1,4 @@
-# Default values for osd-aws.
+# Default values for rhacs-terraform.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
