add full permissions to fleet shard synchornizer

--- a/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fleetshard-sync
+  namespace: {{ .Release.Namespace }}
   labels:
     app: fleetshard-sync
 spec:
@@ -16,6 +17,7 @@ spec:
       labels:
         app: fleetshard-sync
     spec:
+      serviceAccountName: fleetshard-sync
       containers:
       - name: fleetshard-sync
         image: quay.io/app-sre/acs-fleet-manager:main
