--- a/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync-rbac.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync-rbac.yaml
@@ -7,7 +7,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ printf "%s-%s" "fleetshard-sync-role" .Release.Namespace }}
+  name: {{ printf "%s-%s" "fleetshard-sync-rb" .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
