Addressed review comments

--- a/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-04-operator-group.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-04-operator-group.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: {{ include "observability.namespace" . }}
 spec:
   targetNamespaces:
-  - rhacs-observability
+  - {{ include "observability.namespace" . }}
