--- a/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-05-subscription.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-05-subscription.yaml
@@ -10,5 +10,5 @@ spec:
   installPlanApproval: Automatic
   name: observability-operator
   source: observability-operator-manifests
-  sourceNamespace: rhacs-observability
-  startingCSV: observability-operator.v3.0.10
+  sourceNamespace: {{ include "observability.namespace" . }}
+  startingCSV: observability-operator.{{ .Values.observabilityOperatorVersion }}
