--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -9,8 +9,11 @@ fleetshardSync:
 acsOperator:
   enabled: false
   startingCSV: rhacs-operator.v3.70.0
+
 # See parameters in charts/observability/values.yaml
+# - enabled flag is used to completely enable/disable observability sub-chart
 observability:
+  enabled: true
   github:
     accessToken: ""
     repository: ""
