--- a/dp-terraform/helm/rhacs-terraform/Chart.yaml
+++ b/dp-terraform/helm/rhacs-terraform/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: rhacs-terraform
-description: Chart to terraform dataplane OSD clusters
+description: 'Chart to terraform data plane OSD clusters'
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: "0.1.0"
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -23,7 +23,7 @@ version: 0.1.0
 # It is recommended to use it with quotes.
 appVersion: "0.1.0"
 
-# List of sub-chart and other dependencies
+# List of sub-charts and other dependencies
 dependencies:
   - name: observability
     condition: observability.enabled
