Moved defaults to values file

--- a/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-03-secret-observatorium.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-03-secret-observatorium.yaml
@@ -4,10 +4,10 @@ metadata:
   name: rhacs-observatorium
   namespace: {{ include "observability.namespace" . }}
 stringData:
-  tenant: {{ .Values.observatorium.tenant | default "rhacs" | quote }}
-  authType: {{ .Values.observatorium.authType | default "redhat" | quote }}
-  redHatSsoAuthServerUrl: {{ .Values.observatorium.redHatSsoAuthServerUrl | default "https://sso.redhat.com/auth/" | quote }}
-  redHatSsoRealm: {{ .Values.observatorium.redHatSsoRealm | default "redhat-external" | quote }}
+  tenant: {{ .Values.observatorium.tenant | quote }}
+  authType: {{ .Values.observatorium.authType | quote }}
+  redHatSsoAuthServerUrl: {{ .Values.observatorium.redHatSsoAuthServerUrl | quote }}
+  redHatSsoRealm: {{ .Values.observatorium.redHatSsoRealm | quote }}
   gateway: {{ .Values.observatorium.gateway | quote }}
   metricsClientId: {{ .Values.observatorium.metricsClientId | quote }}
   metricsSecret: {{ .Values.observatorium.metricsSecret | quote }}
