--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -20,10 +20,10 @@ observability:
     repository: ""
     tag: "master"
   observatorium:
-    tenant: ""
+    tenant: "rhacs"
+    authType: "redhat"
+    redHatSsoAuthServerUrl: "https://sso.redhat.com/auth/"
+    redHatSsoRealm: "redhat-external"
     gateway: ""
-    authType: ""
-    redHatSsoAuthServerUrl: ""
-    redHatSsoRealm: ""
     metricsClientId: ""
     metricsSecret: ""
